Correction to google font usage, and carousel indicators so now visible.

--- a/trove_project/static/css/login.css
+++ b/trove_project/static/css/login.css
@@ -9,6 +9,11 @@ body, .carousel, .carousel .item {
 	height: 100%;
 }
 
+.carousel-indicators li {
+	border-color: #726BA5;
+	background-color: #726BA5;
+}
+
 .thumbnail {
 	border: none;
 	background-color: transparent;
